# factoribot

./: .gitignore  Makefile  README.md
.serena/: project.yml
daemon/: pyproject.toml
daemon/examples/: petroleum_cracking.json  purple_am2_nomods.json
daemon/factoribot/: __init__.py  agent.py  blueprint.py  bpanalyze.py  cli.py  gamedata.py  model.py  report.py  server.py  solver.py  spec.py  tools.py  units.py
daemon/factoribot/llm/: __init__.py  base.py  fake.py  keys.py  openai.py
daemon/tests/: test_agent.py  test_blueprint.py  test_bpanalyze.py  test_server.py  test_session.py  test_solver.py
daemon/tests/fixtures/: wip_science.txt
mod/: control.lua  data.lua  info.json  settings.lua
mod/locale/en/: factoribot.cfg
scripts/: factoribot-play.command
